--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -8,19 +8,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get Date
-        uses: srfrnk/current-time@master
+        uses: Kaven-Universe/github-action-current-date-time@v1
         id: current-time
         with:
-          format: YYYYMMDD
+          format: "YYYYMMDD"
     outputs:
-      RELEASE_DATE: ${{ steps.current-time.outputs.formattedTime }}
-      FILE_NAME: lstgx_external_release_${{ steps.current-time.outputs.formattedTime }}.zip
+      RELEASE_DATE: ${{ steps.current-time.outputs.time }}
+      FILE_NAME: cocosx_release_${{ steps.current-time.outputs.time }}.zip
   release:
     runs-on: ubuntu-latest
     needs: pre
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           submodules: 'recursive'
       - name: Packing Project
@@ -32,25 +32,19 @@ jobs:
           zip -q -1 -r $FILE_NAME *
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
+        uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RELEASE_DATE: ${{ needs.pre.outputs.RELEASE_DATE }}
         with:
+          files: |
+            *.zip
+          token: ${{ env.GITHUB_TOKEN }}
+          name: ${{ env.RELEASE_DATE }}
           tag_name: ${{ env.RELEASE_DATE }}
-          release_name: ${{ env.RELEASE_DATE }}
           body: |
             Release ${{ env.RELEASE_DATE }}
+          append_body: true
+          generate_release_notes: true
           draft: false
-          prerelease: true
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FILE_NAME: ${{ needs.pre.outputs.FILE_NAME }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./${{ env.FILE_NAME }}
-          asset_name: ${{ env.FILE_NAME }}
-          asset_content_type: application/zip
+          prerelease: false
