--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -20,7 +20,7 @@ jobs:
     needs: pre
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: nschloe/action-cached-lfs-checkout@v1
         with:
           submodules: 'recursive'
       - name: Packing Project
