--- a/cocos/CMakeLists.txt
+++ b/cocos/CMakeLists.txt
@@ -50,7 +50,7 @@ option(CC_ENABLE_EXT_PARTICLE3D "Build extension Particle3D" ON)
 option(CC_ENABLE_EXT_PHYSICS_NODE "Build extension physics-nodes" ON)
 option(CC_ENABLE_EXT_SPINE "Build extension spine" ON)
 option(CC_ENABLE_EXT_DRAGONBONES "Build extension DragonBones" ON)
-option(CC_ENABLE_EXT_COCOSTUDIO "Build extension cocostudio" OFF)
+option(CC_ENABLE_EXT_COCOSTUDIO "Build extension cocostudio" ON)
 option(CC_ENABLE_EXT_FAIRYGUI "Build extension FairyGUI" ON)
 option(CC_ENABLE_EXT_LIVE2D "Build extension Live2D" OFF)
 option(CC_ENABLE_EXT_EFFEKSEER "Build extension Effekseer" OFF)
