--- a/extensions/scripting/lua-bindings/CMakeLists.txt
+++ b/extensions/scripting/lua-bindings/CMakeLists.txt
@@ -9,7 +9,6 @@ set(lua_bindings_manual_headers
     manual/CCLuaBridge.h
     manual/extension/axlua_extension_manual.h
     manual/LuaBasicConversions.h
-    manual/spine/LuaSkeletonAnimation.h
     manual/platform/ios/CCLuaObjcBridge.h
     manual/network/axlua_network_manual.h
     manual/network/lua_xml_http_request.h
@@ -24,8 +23,6 @@ set(lua_bindings_manual_headers
     manual/AxluaLoader.h
     manual/CCLuaValue.h
     manual/physics3d/axlua_physics3d_manual.h
-    manual/cocostudio/lua-cocostudio-conversions.h
-    manual/cocostudio/CustomGUIReader.h
     manual/ui/axlua_ui_manual.hpp
     manual/controller/axlua_controller_manual.hpp
     )
@@ -44,17 +41,11 @@ set(lua_bindings_manual_files
     manual/base/axlua_base_manual.cpp
     manual/physics/axlua_physics_manual.cpp
     manual/3d/axlua_3d_manual.cpp
-    manual/cocostudio/CustomGUIReader.cpp
-    manual/cocostudio/axlua_cocostudio_manual.cpp
-    manual/cocostudio/lua-cocostudio-conversions.cpp
-    manual/cocostudio/axlua_csloader_manual.cpp
     manual/controller/axlua_controller_manual.cpp
     manual/extension/axlua_extension_manual.cpp
     manual/network/axlua_network_manual.cpp
     manual/network/lua_xml_http_request.cpp
     manual/network/lua_downloader.cpp
-    manual/spine/axlua_spine_manual.cpp
-    manual/spine/LuaSkeletonAnimation.cpp
     manual/ui/axlua_ui_manual.cpp
     manual/audioengine/axlua_audioengine_manual.cpp
     manual/physics3d/axlua_physics3d_manual.cpp
@@ -66,11 +57,8 @@ set(lua_bindings_auto_headers
     auto/axlua_audioengine_auto.hpp
     auto/axlua_3d_auto.hpp
     auto/axlua_controller_auto.hpp
-    auto/axlua_spine_auto.hpp
-    auto/axlua_studio_auto.hpp
     auto/axlua_base_auto.hpp
     auto/axlua_navmesh_auto.hpp
-    auto/axlua_csloader_auto.hpp
     auto/axlua_physics3d_auto.hpp
     auto/axlua_ui_auto.hpp
     auto/axlua_physics_auto.hpp
@@ -84,15 +72,48 @@ set(lua_bindings_auto_files
     auto/axlua_controller_auto.cpp
     auto/axlua_extension_auto.cpp
     auto/axlua_physics_auto.cpp
-    auto/axlua_spine_auto.cpp
-    auto/axlua_studio_auto.cpp
-    auto/axlua_csloader_auto.cpp
     auto/axlua_ui_auto.cpp
     auto/axlua_audioengine_auto.cpp
     auto/axlua_physics3d_auto.cpp
     auto/axlua_navmesh_auto.cpp
     auto/axlua_backend_auto.cpp
     )
+
+if(CC_ENABLE_EXT_SPINE)
+    list(APPEND lua_bindings_manual_headers
+        manual/spine/LuaSkeletonAnimation.h
+    )
+    list(APPEND lua_bindings_manual_files
+        manual/spine/axlua_spine_manual.cpp
+        manual/spine/LuaSkeletonAnimation.cpp
+    )
+    list(APPEND lua_bindings_auto_headers
+        auto/axlua_spine_auto.hpp
+    )
+    list(APPEND lua_bindings_auto_files
+        auto/axlua_spine_auto.cpp
+    )
+endif()
+if(CC_ENABLE_EXT_COCOSTUDIO)
+    list(APPEND lua_bindings_manual_headers
+        manual/cocostudio/lua-cocostudio-conversions.h
+        manual/cocostudio/CustomGUIReader.h
+    )
+    list(APPEND lua_bindings_manual_files
+        manual/cocostudio/CustomGUIReader.cpp
+        manual/cocostudio/axlua_cocostudio_manual.cpp
+        manual/cocostudio/lua-cocostudio-conversions.cpp
+        manual/cocostudio/axlua_csloader_manual.cpp
+    )
+    list(APPEND lua_bindings_auto_headers
+        auto/axlua_studio_auto.hpp
+        auto/axlua_csloader_auto.hpp
+    )
+    list(APPEND lua_bindings_auto_files
+        auto/axlua_studio_auto.cpp
+        auto/axlua_csloader_auto.cpp
+    )
+endif()
 
 if(APPLE)
     # CCLuaObjcBridge.mm needed by ios and mac
@@ -181,6 +202,7 @@ set(lua_bindings_files
 list(APPEND lua_bindings_files ${lua_bindings_headers})
 
 set(COCOS_LUA_LIB luacocos2d CACHE INTERNAL "The lua bindings lib name" )
+set(COCOS_CORE_LIB cocos2d)
 
 add_library(${COCOS_LUA_LIB} STATIC ${lua_bindings_files})
 target_link_libraries(${COCOS_LUA_LIB} ${COCOS_CORE_LIB})
@@ -194,13 +216,16 @@ get_target_property(lua_ext_depend external CC_LUA_DEPEND)
 target_link_libraries(${COCOS_LUA_LIB} ${lua_ext_depend})
 
 target_include_directories(${COCOS_LUA_LIB}
+    PUBLIC ${cocos_root}/cocos
+    PUBLIC ${cocos_root}/external
+    PUBLIC ${cocos_root}/external/jni.hpp/include
     PUBLIC ${cocos_root}/external/lua
+    PUBLIC ${cocos_root}/external/lua/luajit/include
     PRIVATE manual/platform/android
     PRIVATE manual/platform/android/jni
     PRIVATE ${cocos_root}/extensions/spine/runtime/include
     PRIVATE ${cocos_root}/extensions/cocostudio
     INTERFACE ${cocos_root}/extensions/scripting/lua-bindings/manual
-    PRIVATE ${cocos_root}/extensions/spine/runtime/include
 )
 
 if(WINDOWS)
