--- a/extensions/scripting/lua-bindings/proj.android/CMakeLists.txt
+++ b/extensions/scripting/lua-bindings/proj.android/CMakeLists.txt
@@ -13,7 +13,7 @@ add_library(${target_name} STATIC
   ${${target_name}_src}
 )
 
-get_target_property(lua_header ${CC_LUA_ENGINE} INTERFACE_INCLUDE_DIRECTORIES)
+get_target_property(lua_header ${COCOS_LUA_LIB} INTERFACE_INCLUDE_DIRECTORIES)
 get_target_property(tolua_header tolua INTERFACE_INCLUDE_DIRECTORIES)
 target_include_directories(${target_name}
   PRIVATE ../../..
